fixed redirect issues, solved footer icons alignments, modified index template,

--- a/urlshortner/static/styles/index.css
+++ b/urlshortner/static/styles/index.css
@@ -168,6 +168,6 @@ body {
 
 
 .bi-linkedin{
-	transform: translateY(4px);
+	transform: translateY(20px);
 	transform: scale(0.95);
 }
